--- a/box-shadow/style.css
+++ b/box-shadow/style.css
@@ -1,11 +1,16 @@
 .container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: auto;
 }
+p{
+  margin-bottom: 10px;
+}
+/* The BOX-SHADOW property is used to apply a shadow to HTML elements */
 .content {
-    border:1px solid black;
+  border: 1px solid black;
   width: 300px;
   height: 300px;
   box-shadow: 10px 15px 25px 0px #098; /* horizontal offset,vertical offset,blur,spread*/
